Make sure vertical images are never too tall

--- a/public_html/templates/mycodelic2/less/joomgallery.less
+++ b/public_html/templates/mycodelic2/less/joomgallery.less
@@ -48,6 +48,8 @@
         background: #000000;
         max-width: 100%;
         height: auto;
+        max-height: 100vh;
+        width: auto;
     }
     div.well,
     div.jg_details, 
